# prooftree-v2

./: .gitignore  README.md  demo_d3_visualization.py  pyproject.toml  requirements.txt  setup.py  test_d3_integration.py
d3-graph-visualizer/: README.md  eslint.config.mjs
d3-graph-visualizer/src/app/: page.tsx
d3-graph-visualizer/src/components/: GNNVisualizer.tsx  GraphVisualizer.tsx
d3-graph-visualizer/src/utils/: astToGraph.ts  gnnSolver.ts
scripts/: __init__.py  benchmark.py  evaluate.py  evaluate_model.py  train.py  train_advanced.py  train_gnn.py
src/: __init__.py
src/data/: __init__.py  algebra_dataset.py  dataset_generator.py
src/graph/: __init__.py  expression_graph.py
src/models/: __init__.py  gnn_model.py  step_predictor.py
src/solver/: __init__.py  cli.py  gnn_solver.py
src/utils/: __init__.py  algebra_operations.py
src/verification/: __init__.py  sympy_verifier.py
tests/integration/: test_generalization.py  test_solver.py  test_web_interface.py
tests/unit/: test_dataset_generator.py  test_expression_graph.py  test_gnn_model.py  test_verification.py
web/: api.py  app.py  d3_visualizer.py  d3_visualizer_simple.py  demo_complex_expression.html  demo_fraction.html  demo_function.html  demo_index.html  demo_linear_equation.html  demo_multiplication.html  demo_power.html  demo_quadratic_expression.html  demo_simple_addition.html  interactive_demo.html  test_viz.html
web/static/: d3_graph.js
web/templates/: graph_visualization.html
